kubernetes/learning_kuber_reza/ingress_controller/ingress-resource.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wordpress
  namespace: wordpress
  annotations:
      kubernetes.io/ingress.class: nginx
spec:
        #ingressClassName: nginx
  rules:
  - host: kube.softgrand.ir
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: wordpress
            port:
              number: 80
